--- a/libslink/ChangeLog
+++ b/libslink/ChangeLog
@@ -1,3 +1,9 @@
+2010.075: version 2.3
+	- Add BATCH mode support, patch from Andres Heinloo/GFZ.
+	- Add protocol version check for BATCH command >= 3.1.
+	- Increase header search length and hostname resolution buffer (GFZ).
+	- Set protocol version to 3.1.
+
 2009.318: version 2.2c
 	- Add proper string limit for snprintf() call in sl_msr_print().
 
@@ -13,7 +19,7 @@
 	by newline characters, from unbuffered IO, i.e. a file descriptor.
 	- Add slp_openfile() to slplatform.[ch] to portably open files.
 	- Change Makefile and src/Makefile to use user defined CC and CFLAGS.
-	
+
 2007.284: version 2.0 (no version change)
 	- Use memchr() instead of strnstr() in network.c for portability.
 	- Add globmatch.obj to Makefile.wat and Makefile.win.
