*** empty log message ***

--- a/doc/slink2dali.1
+++ b/doc/slink2dali.1
@@ -1,4 +1,4 @@
-.TH SLARCHIVE 1 2010/04/26
+.TH SLARCHIVE 1 2010/06/20
 .SH NAME
 slink2dali \- SeedLink to DataLink
 
@@ -26,6 +26,10 @@ Print program usage and exit.
 .IP "-v         "
 Be more verbose.  This flag can be used multiple times ("-v -v" or
 "-vv") for more verbosity.
+
+.IP "-N \fI\netcode\fR"
+Change the SEED network code to \fInetcode\fR in all records
+forwarded.
 
 .IP "-x \fIstatefile\fR[:\fIinterval\fR]"
 During client shutdown the last received sequence numbers and time
