--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 2010.227. 0.3
-	- Pass all SeedLink packet types to DataLink server.
+	- Pass all SeedLink packet types to DataLink server except INFO and KEEP.
 
 2010.171: 0.2
 	- Add -N option to change network codes in forwarded SEED records.
