*** empty log message ***

--- a/doc/slink2dali.1
+++ b/doc/slink2dali.1
@@ -1,10 +1,10 @@
-.TH SLARCHIVE 1 2010/06/20
+.TH SLINK2DALI 1 2011/01/04
 .SH NAME
 slink2dali \- SeedLink to DataLink
 
 .SH SYNOPSIS
 .nf
-slarchive [options] slhost dlhost
+slink2dali [options] slhost dlhost
 
 .fi
 .SH DESCRIPTION
@@ -13,7 +13,7 @@ streams and forwards the received packets to a \fIDataLink\fR server.
 
 This program is designed to run continuously.  Because the SeedLink
 and DataLink protocols are stateful this program should be very
-tolerante of connection breaks and subsequent re-connections.
+tolerant of connection breaks and subsequent re-connections.
 
 .SH OPTIONS
 
