--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011.117: 0.6
+	- Update libmseed to 2.6.
+	- Add -d option to configure SeedLink connection in dial-up mode.
+
 2011.004: 0.5
 	- Update libdali to 1.4.
 
