--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2022.013: 0.8RC
 	- Update libmseed to 2.19.6
-	- Update libdali to 2.6
+	- Update libslink to 2.6
+	- Update libdali to 1.8
 
 2012.310: 0.7
 	- Do not forward SL packet types of SLNUM and SLCHA (value 6),
