--- a/doc/slink2dali.1
+++ b/doc/slink2dali.1
@@ -1,4 +1,4 @@
-.TH SLINK2DALI 1 2011/04/27
+.TH SLINK2DALI 1 2022/01/13
 .SH NAME
 slink2dali \- SeedLink to DataLink
 
@@ -77,6 +77,24 @@ will send data indefinately.  This option will override any saved
 state information.
 
 Warning: time windowing might be disabled on the remote server.
+
+.IP "-nd \fIdelay\fR"
+The network reconnect delay (in seconds) for the connection to
+the SeedLink server.  If the connection breaks for any reason
+this will govern how soon a reconnection should be attempted.
+The default value is 30 seconds.
+
+.IP "-nt \fItimeout\fR"
+The network timeout (in seconds) for the connection to the SeedLink
+server.  If no data [or keep alive packets?] are received in this
+time the connection is closed and re-established (after the
+reconnect delay has expired).  The default value is 600 seconds.
+A value of 0 disables the timeout.
+
+.IP "-k \fIkeepalive\fR  (requires SeedLink >= 3)"
+Keepalive packet interval (in seconds) at which keepalive (heartbeat)
+packets are sent to the server.  Keepalive packets are only sent if
+nothing is received within the interval.
 
 .IP "\fIslhost\fR"
 Specifies the address of the SeedLink server in host:port format.
