Rebrand IRIS -> EarthScope

--- a/doc/slink2dali.1
+++ b/doc/slink2dali.1
@@ -174,5 +174,5 @@ on the same host as the DataLink server.
 .SH AUTHOR
 .nf
 Chad Trabant
-IRIS Data Management Center
+EarthScope Data Services
 .fi
